--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -89,9 +89,12 @@ table {
 }
 th {
   background-color: hsl(220deg 14.29% 95.88%);
+  padding: 20px;
+  border-radius: 8px;
 }
 td {
   border-bottom: 1px solid rgb(224, 219, 219);
+  padding: 20px;
 }
 button:hover {
   opacity: 0.6;
